Copyright (c) 2002-2007 Infrae. All rights reserved.
See also LICENSE.txt

Silva changes

  Silva 2.0.1

    Bugs fixed:

      - The lookup window allowed one to add content and assets to
        ghostfolders, which isn't really advisable. This is no longer
        possible.

      - Fixed the thumbnailing/caching bug. When a thumbnailed image
        was resized back to 100%, a copy was being made to make sure
        the modification date headers are newer. I changed this so
        only the modifcation date is updated, but no copy of the image
        is being made, instead the original image is used.

      - Removed extra <br/> tag when viewing codesources in kupu.

      - fix for bug 109008: wrong tooltip when hovering over version
        status link

      - importing a zexp file with the Silva root in there was
        failing, because a Zope 3 event got fired that tried to re-add
        'collection' to 'service_metadata' while this is already
        there. Added a check to SilvaMetadata (1.0.1) that fixes this.

  Silva 2.0

    Features added:

      - Use layers in our tests.  This makes sure that we can use
        unittests that set up and tear down the component architecture
        without interfering with the components that were set up for
        the integrational tests using the actual Products' ZCML.

      - Use `DefaultUnicodeEncodingConflictResolver` instead of the
        default `Z2UnicodeEncodingConflictResolver` for page
        templates.  This means that our page templates will not
        attempt to implicitly convert to something when a string is
        not unicode and it's not a string containing ASCII characters
        only.

      - Removed obsolete five:traversable statements from zcml.

      - PageTemplateFile was used with non-existing page
        templates. This used to work in versions prior to Zope 2.10,
        but failed now. Changed __init__.py so that these