@@ -7,6 +7,8 @@ Silva changes
 
     Bugs fixed:
 
+      - creationdate is once again set on versioned content.
+
       - The lookup window allowed one to add content and assets to
         ghostfolders, which isn't really advisable. This is no longer
         possible.
